refactor: introduce ExternalServiceException and actualizar el manejo de errores en todos los servicios