@@ -10,7 +10,6 @@ import org.springframework.stereotype.Service;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -22,7 +21,7 @@ public class FileServiceImpl implements FileService {
     public List<FilesResponseDto> findAll() {
         return fileRepository.findAll().stream()
                 .map(FilesDtoMapper::toResponseDto)
-                .collect(Collectors.toList());
+            .toList();
     }
 
     @Override
